[gd_scene load_steps=12 format=3 uid="uid://dkjcl704cqtsd"]

[ext_resource type="PackedScene" uid="uid://c7d3l5ahp6lii" path="res://background.tscn" id="1_40my5"]
[ext_resource type="Script" path="res://game.gd" id="1_si3pb"]
[ext_resource type="PackedScene" uid="uid://d2sqrxdyt5ryt" path="res://player.tscn" id="3_j0k6l"]
[ext_resource type="PackedScene" uid="uid://ddfenqyur3rl8" path="res://basket.tscn" id="4_hlrky"]
[ext_resource type="Script" path="res://label.gd" id="6_bbnkl"]
[ext_resource type="Texture2D" uid="uid://cb8i7i65h25m4" path="res://TreetopsYellow.PNG" id="7_4dmjc"]
[ext_resource type="PackedScene" uid="uid://bt070uscdrvfg" path="res://apple_two.tscn" id="7_60hft"]
[ext_resource type="Script" path="res://score_label.gd" id="8_2tmu1"]

[sub_resource type="Curve2D" id="Curve2D_8k455"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 78, -39.857, 0, 0, 0, 0, 1067, -34.0713)
}
point_count = 2

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_d0xvx"]
distance = -88.4335

[sub_resource type="LabelSettings" id="LabelSettings_uy3vi"]
font_size = 27
font_color = Color(0.984314, 0.878431, 0.705882, 1)

[node name="Game" type="Node"]
script = ExtResource("1_si3pb")
appletwo_scene = ExtResource("7_60hft")

[node name="Player" parent="." instance=ExtResource("3_j0k6l")]
z_index = 3
position = Vector2(580, 480)
speed = 450

[node name="Basket" parent="Player" instance=ExtResource("4_hlrky")]
z_index = -1
position = Vector2(-103.223, -18.0229)
collision_layer = 2
collision_mask = 2

[node name="MobPath" type="Path2D" parent="."]
scale = Vector2(1, 1.55556)
curve = SubResource("Curve2D_8k455")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
position = Vector2(78, -39.857)
rotation = 0.00584998

[node name="TreeTopsYellow" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(569.5, 441)
scale = Vector2(0.553723, 0.704492)
texture = ExtResource("7_4dmjc")

[node name="background" parent="." instance=ExtResource("1_40my5")]
position = Vector2(581, 363)

[node name="CollisionShape2D3" type="CollisionShape2D" parent="background"]
scale = Vector2(4.88652, 3.17753)
shape = SubResource("WorldBoundaryShape2D_d0xvx")

[node name="MobTimer" type="Timer" parent="."]
wait_time = 2.5
autostart = true

[node name="LableTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="Label" type="Label" parent="."]
offset_left = 361.0
offset_top = 192.0
offset_right = 1280.0
offset_bottom = 269.0
scale = Vector2(1.03835, 1.22107)
text = "Use the left and right arrow keys and
 catch as many apples as you can!"
label_settings = SubResource("LabelSettings_uy3vi")
script = ExtResource("6_bbnkl")

[node name="ScoreLabel" type="Label" parent="."]
z_index = 1
offset_left = 41.0
offset_top = 5.0
offset_right = 87.0
offset_bottom = 115.0
theme_override_font_sizes/font_size = 80
text = "0"
max_lines_visible = 1
script = ExtResource("8_2tmu1")

[node name="Setting" type="Node" parent="."]

[connection signal="caught" from="Player/Basket" to="." method="_on_basket_caught"]
[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="timeout" from="LableTimer" to="Label" method="_on_lable_timer_timeout"]
